<resources>
    <string name="app_name">StayActive</string>
    <string name="legs_name">NOGI - lista ćwiczeń</string>
    <string name="abdomen_name">BRZUCH - lista ćwiczeń</string>
    <string name="triceps_name"> TRICEPS - lista ćwiczeń</string>
    <string name="biceps_name"> BICPES - lista ćwiczeń</string>
    <string name="arms_name"> BARKI - lista ćwiczeń</string>
    <string name="back_name"> PLECY - lista ćwiczeń</string>
    <string name="chest_name"> KLATKA PIERSIOWA - lista ćwiczeń</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_a_chest_exercises">Open a chest exercises</string>
    <string name="open_an_arms_exercises">Open an arms exercises</string>
    <string name="open_a_biceps_exercises">Open a biceps exercises</string>
    <string name="open_a_back_exercises">Open a back exercises</string>
    <string name="open_an_abdominal_exercises">Open an abdominal exercises</string>
    <string name="open_a_triceps_exercises">Open a triceps exercises</string>
    <string name="open_a_legs_exercises">Open a legs exercises</string>
    <string name="klatka_piersiowa">KLATKA PIERSIOWA</string>
    <string name="plecy">PLECY</string>
    <string name="biceps">BICEPS</string>
    <string name="nogi">NOGI</string>
    <string name="brzuch">BRZUCH</string>
    <string name="barki">BARKI</string>
    <string name="triceps">TRICEPS</string>
    <string name="opens_beginner_exercise_list">Opens beginner exercise list</string>
    <string name="opens_intermediate_exercise_list">Opens intermediate exercise list</string>
    <string name="opens_advenced_exercise_list">Opens advenced exercise list</string>
    <string name="trening_dla_pocz_tkuj_cych">Trening dla początkujących</string>
    <string name="trening_dla_redniozaawansowanych">Trening dla średniozaawansowanych</string>
    <string name="trening_dla_zaawansowanych">Trening dla zaawansowanych</string>
    <string name="title_activity_plan_b">PlanB</string>
    <string name="tab_text_1">Dzień 1</string>
    <string name="tab_text_2">Dzień 2</string>
    <string name="tab_text_3">Dzień 3</string>
    <string name="Atab_text_1">Dzień 1 (PUSH)</string>
    <string name="Atab_text_2">Dzień 2 (PULL)</string>
    <string name="Atab_text_3">Dzień 3 (PUSH)</string>
    <string name="Atab_text_4">Dzień 4 (PULL)</string>

    <string name="Bests_text_1">Klatka piersiowa</string>
    <string name="Bests_text_2">Plecy</string>
    <string name="Bests_text_3">Barki</string>
    <string name="Bests_text_4">Biceps</string>
    <string name="Bests_text_5">Triceps</string>
    <string name="Bests_text_6">Brzuch</string>
    <string name="Bests_text_7">Nogi</string>

    <string name="title_activity_plan_i">PlanI</string>
    <string name="title_activity_plan">PlanA</string>
    <string name="title_activity_plans_beginer">PlansBeginer</string>
    <string name="title_activity_plans_inter">PlansInter</string>
    <string name="title_activity_plans_adv">PlansAdv</string>
    <string name="trenig_push_pull"><![CDATA[Trenig Push&Pull]]></string>
    <string name="title_activity_bests">bests</string>
    <string name="title_activity_best">best</string>
    <string name="weightimg">weightIMG</string>
    <string name="weight">Waga</string>
    <string name="hintWEIGHT">...</string>
    <string name="heightimg">heightIMG</string>
    <string name="height">Wzrost</string>
    <string name="hintHEIGHT">...</string>
    <string name="armimg">armIMG</string>
    <string name="arm">Obwód ramienia</string>
    <string name="armHINT">...</string>
    <string name="chestimg">chestIMG</string>
    <string name="chest">Obwód klatki piersiowej</string>
    <string name="chestHINT">...</string>
    <string name="stomachIMG">Obwód talii / brczucha</string>
    <string name="stomachHINT">...</string>
    <string name="hipimg">hipIMG</string>
    <string name="hip">Obwód biodra</string>
    <string name="hipHINT">...</string>
    <string name="legimg">legIMG</string>
    <string name="leg">Obwód uda</string>
    <string name="legHINT">...</string>
    <string name="calvimg">calvIMG</string>
    <string name="calv">Obwód łydki</string>
    <string name="calvHINT">...</string>
    <string name="bodybtn">✓</string>
    <string name="ciezar">Ciężar (KG):</string>
    <string name="obciazenie">Podaj obciążenie</string>
    <string name="powtorzenia">Powtórzenia:</string>
    <string name="iloscpowt">Podaj ilość powtórzeń</string>
    <string name="data">Data:</string>
    <string name="wybierz_date">Wybierz datę</string>
    <string name="update">aktualizuj</string>
    <string name="powtorzenia_czas">Powtórzenia / Czas</string>
    <string name="ilosc_powt_czas">Podaj ilość powtórzeń / czas</string>
    <string name="test">ABccddeeeffgg</string>
    <string name="title_RV">Title</string>
    <string name="instructionimg">instructionIMG</string>
    <string name="tv_working_mscl">tv_working_mscl</string>
    <string name="description">description</string>
    <string name="kg">KG</string>
    <string name="cm">CM</string>
    <string name="title_activity_do_usuniecia">doUSUNIECIA</string>


</resources>