<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sn"
    android:orientation="vertical"
    tools:context="Bests.ArmsB">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ciezar"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sdp"
        >
    </TextView>

    <EditText
        android:id="@+id/best"
        android:hint="@string/obciazenie"
        android:textColorHint="#BDB0B0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_19sdp"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/tommyt"
        android:inputType="numberDecimal">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/powtorzenia"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sdp">
    </TextView>

    <EditText
        android:id="@+id/reps"
        android:hint="@string/iloscpowt"
        android:textColorHint="#BDB0B0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_19sdp"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/tommyt"
        android:inputType="number">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/data"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sdp">

    </TextView>

    <EditText
        android:id="@+id/dp"
        android:hint="@string/wybierz_date"
        android:textColorHint="#BDB0B0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_19sdp"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/tommyt"
        android:inputType="date"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >

    </EditText>

    <Button
        android:id="@+id/update"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:backgroundTint="#34838E"
        android:fontFamily="sans-serif-black"
        android:text="@string/update"
        android:textColor="@color/white" />


</LinearLayout>